assets/UI.css
body {
  margin:0;
  padding:0;
  overflow: hidden;
}
canvas {
  margin:auto;
}
.btn-custom, .selector-custom{
color: #494949 !important;
text-transform: uppercase;
font-weight: bold;
font-size: 15px;
text-decoration: none;
background: #000000;
padding: 10px;
border: 4px solid #494949 !important;
display: inline-block;
/* transition: all 0.4s ease 0s; */
font-family: 'Vollkorn', serif;
cursor: pointer;
}
.btn-custom:hover, .selector-custom:hover{
color: #ffffff !important;
background: #f6b93b;
border-color: #f6b93b !important;
transition: all 0.4s ease 0s;
}

.btn-custom.portfolio:hover{
background: #9a4ef1;
border-color: #9a4ef1 !important;
}

.selector-custom.mode:hover {
background-color:#4e9af1;
border-color: #4e9af1 !important;
}

.selector-custom.song:hover {
background-color:#f14e4e;
border-color: #f14e4e !important;
}

.selector-custom.label {
  position: relative;
  padding: 5px 10px;
  color: #414141;
  display: block;
  font-family: 'Vollkorn', serif;
  content: "▼";
  text-align: right;
  padding-left: 5px;
  padding-right: -5px;
}

.selector-custom.label:after{
  content: "▼";
  text-align: right;
  padding-left: 5px;
  padding-right: -5px;
}

.selector-custom.label:hover:after {
  content: "►";
}

.dropdown{
    min-width: 10%; /* Set width of the dropdown */
    display: none;
    position: absolute;
}
.dropdown li {
   position: relative;
}
li:hover ul.dropdown{
    display: block;	/* Display the dropdown */
    position: absolute;
    top:-60%;
    left:75%;
}

.dropdown ul li{
   position: relative;
   text-align: left;
   display: block;
}

.cust-slider {
  -webkit-appearance: none;
  width: 10%;
  height: 15px;
  border-radius: 5px;
  background: #d3d3d3;
  outline: none;
  opacity: 0.4;
  -webkit-transition: .2s;
  transition: opacity .2s;
}

.cust-slider:hover {
   opacity: 1;
}

.cust-slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background: #4CAF50;
  cursor: pointer;
}

.cust-slider::-moz-range-thumb {
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background: #4CAF50;
  cursor: pointer;
}

